# Kernel_Linux

./: .gitignore  CODEBASE_SURVEY.md  PLAN_HOANCHINH.md  README.md
01_shell_system_admin/: README.md  packages.txt
01_shell_system_admin/scripts/: admin_tool.sh
02_ubuntu_process_file_socket_network/: .gitignore  Makefile  README.md
02_ubuntu_process_file_socket_network/src/: cli_commands.c  cli_commands.h  common.c  common.h  file_manager.c  file_manager.h  main.c  network_info.c  network_info.h  process_manager.c  process_manager.h  socket_tools.c  socket_tools.h
03_kernel_module_networking/: README.md  linux-kernel-labs-networking-vi.md
03_kernel_module_networking/1-2-netfilter/: README.md
03_kernel_module_networking/3-4-tcp-sock/: README.md
03_kernel_module_networking/5-udp-sock/: README.md
03_kernel_module_networking/6-tcp-udp-steg/: Makefile  README.md
03_kernel_module_networking/edge_firewall/: Makefile  README.md  test_edge_firewall.sh
03_kernel_module_networking/packet_capture/: Makefile  (+1 more)
04_qt_dashboard/: CMakeLists.txt
04_qt_dashboard/resources/: style.qss
04_qt_dashboard/src/: MainWindow.cpp  MainWindow.h  main.cpp
04_qt_dashboard/src/components/: ActivityLogger.cpp  ActivityLogger.h  CommandRunner.cpp  CommandRunner.h  FileExplorer.cpp  FileExplorer.h  HeaderBar.cpp  HeaderBar.h  ProcessRegistry.cpp  ProcessRegistry.h  Sidebar.cpp  Sidebar.h  SimpleFormDialog.cpp  SimpleFormDialog.h
04_qt_dashboard/src/pages/: ActivityLogPage.cpp  ActivityLogPage.h  PacketCapturePage.cpp  PacketCapturePage.h  ProcessNetworkPage.cpp  ProcessNetworkPage.h  ShellAutomationPage.cpp  ShellAutomationPage.h  SystemMonitorPage.cpp  SystemMonitorPage.h
(+25 files in other folders)
